update : Regex pattern, data loader